# ProstoPay_task

./: .gitignore
test_task_1/: README.md  hashmap_tests.py  main.py  pyproject.toml
test_task_2/: .env.example  README.md  pyproject.toml  user_service.py  utils.py
test_task_2/db/: session.py
test_task_2/models/: user_model.py
test_task_2/schemas/: user_schema.py
test_task_2/tests/: test_user_service.py
